--- a/public/index.css
+++ b/public/index.css
@@ -132,11 +132,16 @@ button.primary, button.secondary {
 
 /*Start loading*/
 .loading {
-    display: none;
+    display: none !important;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 .loading.active {
-    opacity: flex;
+    display: flex !important;
 }
 
 .loading img {
