--- a/view/index.ejs
+++ b/view/index.ejs
@@ -102,7 +102,7 @@
   
         <div class="loading jcc aic">
             <div class="overlay"></div>
-            <img src="../public/Images/spinner.gif" alt="loading" />
+            <img src="../Images/spinner.gif" alt="loading" />
         </div>
     </main>
 
