--- a/view/index.ejs
+++ b/view/index.ejs
@@ -1,110 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../cssGhoul.css">
-    <link rel="stylesheet" href="../index.css">
-    <link rel="stylesheet" href="../all.min.css">
-    <link rel="stylesheet" href="../fontawesome.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../cssGhoul.css" />
+    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="../all.min.css" />
+    <link rel="stylesheet" href="../fontawesome.min.css" />
     <title>Business Travel Bureau</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main>
-        <header>
-            <div class="contain grid jcs aic">
-                <h2 class="logo flex jcc aic pad10">Business Travel Bureau</h2>
-                <div class="booking flex jcsb aic g30 pad10">
-                    <h3>Online Booking Form</h3>
-                    <button id="add_button" class="flex jcc aic g5 primary"><i class="fa-solid fa-plus"></i>
-                        Add</button>
-                </div>
+      <header>
+        <div class="contain grid jcs aic">
+          <h2 class="logo flex jcc aic pad10">Business Travel Bureau</h2>
+          <div class="booking grid jcs aic g20 pad10">
+            <div class="flex jcsb aic g30">
+              <h3>Online Booking Form</h3>
+              <button id="add_button" class="flex jcc aic g5 primary">
+                <i class="fa-solid fa-plus"></i> Add
+              </button>
             </div>
-        </header>
-
-        <section class="logs">
-            <div class="contain grid jcs aic g30">
-              <%data.forEach((e) => { %>
-                <div class="log grid jcs aic pad10 g10">
-                    <div class="log_info grid jcfs aic g5">
-                        <h4><%= e.CustomerName%></h4>
-                        <h4><%= e.CustomerEmail%></h4>
-                        <h4><%= e.HotelPrice%></h4>
-                        <h5><%= e.createdAt %></h5>
-                    </div>
-                    <div class="log_options flex jcfe aic g20">
-                        <div class="flex jcc aic">
-                            <i class="fa-solid fa-trash-can"></i>
-                        </div>
-                        <div class="flex jcc aic">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </div>
-                        <div class="flex jcc aic">
-                            <i class="fa-solid fa-envelope"></i>
-                        </div>
-                    </div>
-                </div>
-            <%  }); %>
-                
-            </div>
-        </section>
-
-        <section class="booking_form">
-            <div class="back"></div>
-            <form action="/sendEmail" method="post" class="contain grid jcs aifs pad20 g30">
-                <div class="head flex jcsb aic g30">
-                    <h3 class="flex jcfs aic g10">
-                        <div id="close_button" class="flex close_icon jcc aic">
-                            <i class="fa-solid fa-xmark"></i>
-                        </div>
-                        Online Booking Form
-                    </h3>
-                    <div class="buttons flex jcfe aic g5">
-                        <button id="cancel_button" type="button" class="secondary">Cancel</button>
-                        <button id="save_button" type="submit" class="flex jcc aic primary">Save</button>
-                    </div>
-                </div>
-                <div class="form_inputs grid jcs aic g30">
-                    <div class="time grid jcs aic g10">
-                        <label>Timestamp*</label>
-                        <input required type="date" placeholder="09/15/2023 06:39:40 PM">
-                    </div>
-                    <div class="closer_name grid jcs aic g10">
-                        <label for="closer_name">Closer Name</label>
-                        <select id="closer_name" required name="closerName" id="closer_name">
-                            <option value="Choose Closer Name"></option>
-                            <option value="name1">Name 1</option>
-                            <option value="name2">Name 2</option>
-                        </select>
-                    </div>
-                    <div class="customer_name grid jcs aic g10">
-                        <label for="customer_name">Customer Name</label>
-                        <input id="customer_name" required type="text" name="customerName" placeholder="Enter Customer Name">
-                    </div>
-                    <div class="customer_email grid jcs aic g10">
-                        <label for="customer_email">Customer Email</label>
-                        <input id="customer_email" required type="email" name="customerEmail" placeholder="Enter Customer Email">
-                    </div>
-                    <div class="hotel_name grid jcs aic g10">
-                        <label for="hotel_name">Hotel Name</label>
-                        <input id="hotel_name" required type="text" name="hotelName" placeholder="Enter Hotel Name">
-                    </div>
-
-                    <div class="hotel_price grid jcs aic g10">
-                        <label for="hotel_price">Hotel Price</label>
-                        <input id="hotel_price" required type="number" name="hotelPrice" placeholder="0">
-                    </div>
-                </div>
+            <form action="/search" method="POST" class="form_search flex jcs aic">
+              <input
+                type="search"
+                name="search"
+                id="search"
+                placeholder="Search..."
+                class="pad10"
+              />
+              <button type="submit" class="flex search_button jcc aic pad10">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
             </form>
-        </section>
-
-        <div class="loading jcc aic">
-            <div class="overlay"></div>
-            <img src="../Images/spinner.gif" alt="loading" />
+          </div>
         </div>
+      </header>
+
+      <section class="logs">
+        <div class="contain grid jcs aic g30">
+          <%data.forEach((e) => { %>
+          <div class="log grid jcs aic pad10 g10">
+            <div class="log_info grid jcfs aic g5">
+              <h4>Customer Name : <%= e.CustomerName%></h4>
+              <h4>Customer Email : <%= e.CustomerEmail%></h4>
+              <h4>Hotel Name : <%= e.HotelName%></h4>
+              <h4>Closer Name : <%= e.CloserName%></h4>
+              <h5><%= e.createdAt %></h5>
+            </div>
+          </div>
+          <% }); %>
+        </div>
+      </section>
+
+      <section class="booking_form">
+        <div class="back"></div>
+        <form
+          action="/sendEmail"
+          method="post"
+          class="contain grid jcs aifs pad20 g30"
+          id="booking_form"
+        >
+          <div class="head flex jcsb aic g30">
+            <h3 class="flex jcfs aic g10">
+              <div id="close_button" class="flex close_icon jcc aic">
+                <i class="fa-solid fa-xmark"></i>
+              </div>
+              Online Booking Form
+            </h3>
+            <div class="buttons flex jcfe aic g5">
+              <button id="cancel_button" type="button" class="secondary">
+                Cancel
+              </button>
+              <button
+                id="save_button"
+                type="submit"
+                class="flex jcc aic primary"
+              >
+                Save
+              </button>
+            </div>
+          </div>
+          <div class="form_inputs grid jcs aic g30">
+            <div class="closer_name grid jcs aic g10">
+              <label for="closer_name">Closer Name</label>
+              <select
+                id="closer_name"
+                required
+                name="closerName"
+                id="closer_name"
+              >
+                <option value="Choose Closer Name"></option>
+                <option value="Jasmine Griffin">Jasmine Griffin</option>
+                <option value="Oliver Shaw">Oliver Shaw</option>
+                <option value="Veronica Iceberg">Veronica Iceberg</option>
+                <option value="Sarah Anderson">Sarah Anderson</option>
+                <option value="April Adams">April Adams</option>
+              </select>
+            </div>
+            <div class="customer_name grid jcs aic g10">
+              <label for="customer_name">Customer Name</label>
+              <input
+                id="customer_name"
+                required
+                type="text"
+                name="customerName"
+                placeholder="Enter Customer Name"
+              />
+            </div>
+            <div class="customer_email grid jcs aic g10">
+              <label for="customer_email">Customer Email</label>
+              <input
+                id="customer_email"
+                required
+                type="email"
+                name="customerEmail"
+                placeholder="Enter Customer Email"
+              />
+            </div>
+            <div class="hotel_name grid jcs aic g10">
+              <label for="hotel_name">Hotel Name</label>
+              <input
+                id="hotel_name"
+                required
+                type="text"
+                name="hotelName"
+                placeholder="Enter Hotel Name"
+              />
+            </div>
+
+            <div class="hotel_price grid jcs aic g10">
+              <label for="hotel_price">Hotel Price</label>
+              <input
+                id="hotel_price"
+                required
+                type="number"
+                name="hotelPrice"
+                placeholder="0"
+              />
+            </div>
+          </div>
+        </form>
+      </section>
+
+      <div class="loading jcc aic">
+        <div class="overlay"></div>
+        <img src="../Images/spinner.gif" alt="loading" />
+      </div>
     </main>
     <script src="../index.js"></script>
-</body>
+  </body>
 </html>
