--- a/view/index.ejs
+++ b/view/index.ejs
@@ -82,7 +82,7 @@
               </button>
             </div>
           </div>
-          <div class="form_inputs grid jcs aic g30">
+          <div class="form_inputs grid jcs aifs g30">
             <div class="closer_name grid jcs aic g10">
               <label for="closer_name">Closer Name</label>
               <select
