update search input

--- a/view/index.ejs
+++ b/view/index.ejs
@@ -22,7 +22,7 @@
                 <i class="fa-solid fa-plus"></i> Add
               </button>
             </div>
-            <form action="/search" method="POST" class="form_search flex jcs aic">
+            <form action="/search" method="POST" id="search_form" class="form_search flex jcs aic">
               <input
                 type="search"
                 name="search"
