--- a/public/index.css
+++ b/public/index.css
@@ -53,12 +53,16 @@ button.primary, button.secondary {
     cursor: pointer;
 }
 
+.log_info h4 span{
+    color:#037ef3;
+}
+
 /*End Logs*/
 
 
 /*Start Booking Form*/
 
-.booking_form .contain {
+.booking_form .form {
     transform: translateX(100%);
     position: absolute;
     width: 50%;
@@ -70,13 +74,13 @@ button.primary, button.secondary {
     background-color: var(--white);
 }
 
-.booking_form .contain.active {
+.booking_form .form.active {
     position: absolute;
-    transform: translateX(0);
+    transform: translateX(0) !important;
     transition: var(--transition);
 }
 
-.booking_form .contain .close_icon i {
+.booking_form .form .close_icon i {
     color: var(--black);
     font-size: 20px;
     cursor: pointer;
@@ -98,11 +102,11 @@ button.primary, button.secondary {
 }
 
 @media(max-width:992px) {
-    .booking_form .contain {
+    .booking_form .form {
         width: 75%;
     }
 
-    .booking_form .contain .close_icon i {
+    .booking_form .form .close_icon i {
         font-size: 18px;
     }
 
@@ -123,11 +127,11 @@ button.primary, button.secondary {
 }
 
 @media(max-width:768px) {
-    .booking_form .contain {
+    .booking_form .form {
         width: 100%;
     }
 
-    .booking_form .contain .close_icon i {
+    .booking_form .form .close_icon i {
         font-size: 16px;
     }
 
