--- a/view/index.ejs
+++ b/view/index.ejs
@@ -53,7 +53,7 @@
           <% }); %>
         </div>
       </section>
-
+      <%console.log(sent)%>
       <section class="booking_form">
         <div class="back"></div>
         <form
