--- a/view/index.ejs
+++ b/view/index.ejs
@@ -37,6 +37,7 @@
           </div>
         </div>
       </header>
+      <div><%sent%></div>
 
       <section class="logs">
         <div class="contain grid jcs aic g30">
@@ -148,9 +149,11 @@
         <div class="overlay"></div>
         <img src="../Images/spinner.gif" alt="loading" />
       </div>
-
-      <div >
-
+      <div class="webGhoul-alert center_abs_x flex jcc aic pad10">
+        <span class="flex jcc aic g10">
+          <i class="fa-solid fa-circle-check"></i>
+          <p>Message Sent Successfully!!</p>
+        </span>
       </div>
     </main>
     <script src="../index.js"></script>
