--- a/public/index.css
+++ b/public/index.css
@@ -194,36 +194,31 @@ button.primary, button.secondary {
 
 /*Start webGhoul Alert*/
 .webGhoul-alert {
-    position: absolute;
+    position: fixed;
     top: 20px;
     z-index: 10000;
     background-color: var(--green);
     color: var(--white);
-    transform: rotateX(90deg) translateX(-50%);
-    animation: slideIn 0.5s, slideOut 0.5s 4.5s;
+    left: 100%;
+    animation-name: slideOut;
+    animation-duration: 10s;
+    animation-fill-mode: both;
 }
 
 .webGhoul-alert span {
     font-size: 20px;
 }
 
-@keyframes slideIn {
-    from {
-        transform: rotateX(90deg) translateX(-50%);
-    }
-
-    to {
-        transform: rotateX(0deg) translateX(-50%);
-    }
-}
 
 @keyframes slideOut {
-    from {
-        transform: rotateX(0deg) translateX(-50%);
+    25% {
+        left:0%;
     }
-
-    to {
-        transform: rotateX(90deg) translateX(-50%);
+    50% {
+        left:-50%;
+    }
+    100% {
+        left: -100%;
     }
 }
 
