--- a/view/index.ejs
+++ b/view/index.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../fontawesome.min.css" />
     <title>Business Travel Bureau</title>
   </head>
-
+  <script src="../node_modules/moment/src/moment.js"></script>
   <body>
     <main class="grid jcs aic g30">
       <header>
@@ -52,7 +52,7 @@
               <h4>Customer Email : <span><%= e.CustomerEmail%></span></h4>
               <h4>Hotel Name : <span><%= e.HotelName%></span></h4>
               <h4>Closer Name : <span><%= e.CloserName%></span></h4>
-              <h5><%= e.createdAt %></h5>
+              <h5><%=  new Intl.DateTimeFormat('en-US', { year: 'numeric', month: '2-digit', day: '2-digit', hour: '2-digit', minute: '2-digit', second: '2-digit' }).format(new Date(e.createdAt)); %></h5>
             </div>
           </div>
           <% }); %>
