--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,10 @@ body.active {
     padding-right: 0px !important;
 }
 
+.logo {
+    width: 100px;
+}
+
 button.primary, button.secondary {
     font-size: 18px;
 }
@@ -95,7 +99,7 @@ button.primary, button.secondary {
     cursor: pointer;
 }
 
-.booking_form form input, .booking_form form select, .booking_form form select option {
+.booking_form form input, form select, form select option {
     padding: 10px;
     border: 2px solid var(--gray);
     border-radius: 4px;
@@ -119,7 +123,7 @@ button.primary, button.secondary {
         font-size: 18px;
     }
 
-    .booking_form form input, .booking_form form select, .booking_form form select option {
+    .booking_form form input, form select, form select option {
         padding: 8px;
         border: 2px solid var(--gray);
         border-radius: 3px;
@@ -144,7 +148,7 @@ button.primary, button.secondary {
         font-size: 16px;
     }
 
-    .booking_form form input, .booking_form form select, .booking_form form select option {
+    .booking_form form input, form select, form select option {
         padding: 6px;
         border: 1px solid var(--gray);
         border-radius: 2px;
@@ -220,6 +224,7 @@ button.primary, button.secondary {
 .webGhoul-alert span {
     font-size: 20px;
 }
+
 @media (max-width:992px) {
     .webGhoul-alert span {
         font-size: 18px;
@@ -231,4 +236,5 @@ button.primary, button.secondary {
         font-size: 14px;
     }
 }
+
 /*End webGhoul Alert*/
