--- a/view/index.ejs
+++ b/view/index.ejs
@@ -15,11 +15,13 @@
     <main class="grid jcs aic g30">
       <header>
         <div class="contain grid jcs aic g30">
-          <img
+          <a href="/">
+            <img
             src="../Images/BTB LOGO COLORED-01.png"
             alt="logo"
             class="center_rel_x logo"
           />
+          </a>
           <div class="booking grid jcs aic g20 pad10">
             <div class="flex jcsb aic g30">
               <h3>Online Booking Form</h3>
@@ -55,7 +57,7 @@
                 <select id="select_page" name="page">
                   <option value="0">Select Page</option>
                   <% for(let i=1;i<count;i++){ %>
-                  <option value=<%=i%>><%=i%></option>
+                  <option value=<%=i%> <%= page == i ? 'selected' : '' %> ><%=i%></option>
                   <% } %>
                 </select>
               </form>
